<resources>
    <string name="app_name">Find a Tutor</string>
    <string name="action_settings">Settings</string>
    <string name="menu_login">Log in</string>
    <string name="menu_logout">Log out</string>
    <string name="login_label">Log In</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="send_text">Send</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="title_sign_in">Welcome</string>
    <string name="sign_up">Sign Up</string>
    <string name="hint_password">******</string>
    <string name="hint_email">E-mail address</string>
    <string name="sign_in">Sign In</string>
    <string name="title_activity_main">Ads</string>
    <string name="title_activity_new_post">Create Ad</string>
    <string name="title_activity_post_detail">Ad Details</string>
    <string name="title_activity_messages">Messages</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="NavDrawer_option0">Ads</string>
    <string name="NavDrawer_option1">Profile</string>
    <string name="NavDrawer_option2">Notifications</string>
    <string name="NavDrawer_option3">Messages</string>
    <string name="NavDrawer_option4">Sessions</string>
    <string name="NavDrawer_option5">Statistics</string>
    <string name="NavDrawer_option6">Settings</string>
    <string name="NavDrawer_option7">Log out</string>
    <string name="NavDrawer_group">Application</string>
    <string name="NavDrawer_Banner_Title1">Arash Ash</string>
    <string name="NavDrawer_Banner_Title2">Bilkent University</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="tab_name_1">Offered</string>
    <string name="tab_name_2">My Ads</string>
    <string name="tab_name_3">Requested</string>
    <string name="loading_message">Loading...</string>
    <string name="course_title_hint">Course Title</string>
    <string name="description_hint">Description</string>
    <string name="tl_hour_rate">TL/hour</string>
    <string name="price_label">Price</string>
    <string name="request_date_hint">Request Date</string>
    <string name="send_button">Send</string>
    <string name="signed_out">signed out</string>
    <string name="loading">Loading…</string>
    <string name="search_hint">search...</string>

    <string name="signed_in_fmt">Auth Code: %s</string>
    <string name="google_status_fmt">Google User: %s</string>
    <string name="write_a_comment">Write a comment...</string>
    <string name="post">Post</string>
    <string name="fill_in_your_session_request_information">Fill in your session request information</string>
    <string name="date">date:</string>
    <string name="prefered_location">prefered location:</string>
    <string name="request">Request</string>
    <string name="cancel">Cancel</string>
    <string name="pick_schedule">pick your available schedule</string>
    <string name="ok">OK</string>

    <string-array name="languages_array">
        <item>Language</item>
        <item>Albanian</item>
        <item>Afrikaans</item>
        <item>Arabic</item>
        <item>Azerbaijani</item>
        <item>Chinese</item>
        <item>Dutch</item>
        <item>English</item>
        <item>Farsi</item>
        <item>French</item>
        <item>German</item>
        <item>Hindi</item>
        <item>Pashto</item>
        <item>Russian</item>
        <item>Spanish</item>
        <item>Turkish</item>
        <item>Urdu</item>
    </string-array>


    <string-array name="subjects_array">
        <item>Category</item>
        <item>Arts</item>
        <item>Math</item>
        <item>Physics</item>
        <item>Chemistry</item>
        <item>Biology</item>
        <item>Economy</item>
        <item>Entrance Exams</item>
        <item>Electrical Engineering</item>
        <item>Computer Science</item>
        <item>Mechanical Engineering</item>
        <item>Civil Engineering</item>
        <item>Chemical Engineering</item>
        <item>Languages</item>
        <item>Humanities</item>
        <item>Social Sciences</item>
    </string-array>


    <string-array name="schools_array">
        <item>Instituition</item>
            <item>Any School</item>
            <item>Ankara Univ</item>
            <item>Bilkent</item>
            <item>Çankaya Univ</item>
            <item>Hacettepe Univ</item>
            <item>ODTU</item>
            <item>Gazi</item>
            <item>TOBB</item>
            <item>TED</item>
            <item>BLIS</item>
            <item>22Bahman</item>
    </string-array>


    <string-array name="day_time_array">

        <item>Monday Morning</item>
        <item>Monday Afternoon</item>
        <item>Monday Evening</item>
        <item></item>
        <item>Tuesday Morning</item>
        <item>Tuesday Afternoon</item>
        <item>Tuesday Evening</item>
        <item></item>
        <item>Wednesday Morning</item>
        <item>Wednesday Afternoon</item>
        <item>Wednesday Evening</item>
        <item></item>
        <item>Thursday Morning</item>
        <item>Thursday Afternoon</item>
        <item>Thursday Evening</item>
        <item></item>
        <item>Friday Morning</item>
        <item>Friday Afternoon</item>
        <item>Friday Evening</item>
        <item></item>
        <item>Saturday Morning</item>
        <item>Saturday Afternoon</item>
        <item>Saturday Evening</item>
        <item></item>
        <item>Sunday Morning</item>
        <item>Sunday Afternoon</item>
        <item>Sunday Evening</item>
    </string-array>
</resources>
