<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_ads"
            android:icon="@drawable/ic_list_black_24dp"
            android:title="@string/NavDrawer_option0" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/NavDrawer_option1" />
        <item
            android:id="@+id/nav_notfications"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/NavDrawer_option2" />
        <item
            android:id="@+id/nav_messages"
            android:icon="@drawable/ic_chat_black_24dp"
            android:title="@string/NavDrawer_option3" />
        <item
            android:id="@+id/nav_sessions"
            android:icon="@drawable/ic_school_black_24dp"
            android:title="@string/NavDrawer_option4" />
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/ic_poll_black_24dp"
            android:title="@string/NavDrawer_option5" />
    </group>

    <item android:title="@string/NavDrawer_group">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/NavDrawer_option6" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_power_settings_new_black_24dp"
                android:title="@string/NavDrawer_option7" />
        </menu>
    </item>

</menu>
