<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.bilkent.findatutor.SignInActivity"
    android:background="@drawable/background1">


    <ImageView
        android:id="@+id/icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/findatutor_lockup_500"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/field_email"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <LinearLayout
        android:id="@+id/layout_email_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/icon"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_email_password"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">


    </LinearLayout>

    <Button
        android:id="@+id/button_sign_in"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:background="@color/colorAccent"
        android:layout_below="@+id/field_password"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/button_sign_up"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:background="@drawable/rounded_button"
        android:layout_below="@+id/button_sign_in"
        android:layout_alignLeft="@+id/button_sign_in"
        android:layout_alignStart="@+id/button_sign_in"
        android:layout_marginTop="59dp" />

    <Button
        android:id="@+id/button_forgot"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:background="@drawable/rounded_button"
        android:layout_below="@+id/button_sign_up"
        android:layout_alignLeft="@+id/button_sign_up"
        android:layout_alignStart="@+id/button_sign_up" />

    <EditText
        android:id="@+id/field_password"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:gravity="center_horizontal"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/field_email"
        android:layout_alignStart="@+id/field_email"
        android:layout_alignRight="@+id/field_email"
        android:layout_alignEnd="@+id/field_email"
        android:textAlignment="textStart"/>

    <EditText
        android:id="@+id/field_email"
        android:layout_width="227dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:gravity="center_horizontal"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:layout_above="@+id/field_password"
        android:layout_centerHorizontal="true"
        android:textAlignment="textStart" />




</RelativeLayout>
