<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">


    <Spinner
        android:id="@+id/spinner_subject"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/checkBox"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/checkBox"
        android:layout_marginRight="60dp"
        android:layout_marginTop="60dp"
        android:longClickable="true"
        android:minHeight="70dp" />

    <EditText
        android:id="@+id/field_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/spinner_subject"
        android:hint="@string/course_title_hint"
        android:maxLines="2"
        android:minLines="1" />

    <EditText
        android:id="@+id/field_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/field_title"
        android:hint="@string/description_hint"
        android:inputType="textMultiLine"
        android:maxLines="10"
        android:minLines="2"
        android:scrollHorizontally="false" />


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_submit_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="16dp"
        android:src="@drawable/ic_navigation_check_24" />


    <Spinner
        android:id="@+id/spinner_school"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/spinner_language"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/spinner_language"
        android:layout_below="@+id/spinner_language"
        android:layout_marginBottom="30dp"
        android:minHeight="70dp" />

    <Spinner
        android:id="@+id/spinner_language"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/field_price"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/field_price"
        android:layout_below="@+id/field_price"
        android:minHeight="70dp" />

    <EditText
        android:id="@+id/field_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/spinner_subject"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/spinner_subject"
        android:layout_below="@+id/field_body"
        android:gravity="left|right"
        android:hint="@string/price_label"
        android:inputType="textMultiLine"
        android:maxLines="10"
        android:scrollHorizontally="false" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/spinner_school"
        android:checked="false"
        android:onClick="onCheckboxClicked"
        android:text="are you requesting for a tutor?" />

    <EditText
        android:id="@+id/field_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/spinner_school"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/spinner_school"
        android:layout_below="@+id/textView12"
        android:hint="@string/request_date_hint"
        android:inputType="textMultiLine"
        android:maxLines="10"
        android:scrollHorizontally="false" />


    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/checkBox"
        android:text="if so, select your session date. otherwise, select your available schedule for the offering!"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ImageButton
        android:id="@+id/schedule_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView12"
        android:layout_marginLeft="160dp"
        android:layout_toEndOf="@+id/field_date"
        android:layout_toRightOf="@+id/field_date"
        android:src="@android:drawable/ic_menu_today" />


</RelativeLayout>
